# xsmaug

./: AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  README.md  TODO  authors.html  autogen.sh  config.h.in  config.lt  configure  configure.ac  dns_resolv  downloads.html  index.html  index2.html  libtool  licenses.html  merc.conf  mercd  muds.html  params.json  stamp-h1  style.css  support.html  test.txt  webclient.html  xmerc.conf  xmercd  xsmaug-server  xsmaug-server.in  xsmaug.conf  xsmaug.conf.in  xsmaug.h.in  xsmaug.html  xsmaug_authors.html  xsmaug_downloads.html  xsmaug_index.html  (+5 more)
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
css/: style.css
data/classes/: class.lst
data/realm/: Build.are  abyss.are  air.are  anthill.are  anvil.are  area.lst  astral.are  bazaar.are  buds.are  canyon.are  catacombs.are  chapel.are  chapelgods.are  cloudymt.are  crystalmir.are  damara.are  daycare.are  donjon.are  draconia.are  dwarfmines.are  dwarven.are  eastern.are  elderwood.are  entry.are  export.are  fantasia.are  forestpath.are  galaxy.are  gallery.are  garden.are  gate.are  gauntlet.are  gilligan.are  goblins.are  gods.are  grave.are  grove.are  gtown.are  gwyn.are  gyard.are  (+65 more)
data/realm/areas_merc/: alice.are  animal.are  anonplis.are  bazaar.are  donjon.are  firetop.are  mirkwood.are  school4.are  tcwnn.are  tcwnn2.are
data/realm/areas_smaug1.4a/: abbatoir.are  abyss.are  air.are  anthill.are  armsmaug.are  blasted.are  chapelgods.are  crypt4.are  cursenec.are  darkmage.are  draconia.are  dream.are  eastern.are  elderwood.are  firenewt.are  forestpath.are  frstdead.are  galaxy.are  gallant.are  gardenillusion.are  gauntlet.are  gtown.are  iscariot.are  isledead.are  jher.are  keepvalor.are  keraptis.are  kheltower.are  land.are  lanfear.are  magicschool.are  marsh.are  matrix.are  mega1.are  nirvana.are  ocean.are  ofcol2.are  orchold.are  pillars.are  piratecove.are  (+19 more)
data/system/: wiz.lst
data/web/: index.html~
data/web/css/: style.css~
db/: darkhaven.db
doc/: 1.How-to-Install.md  2.XSMAUG-FAQ.md  3.XSMAUG-HOWTO.md  4.New-Developers.md  5.-About-Security.md  6.-OLC-(InGame-Online-Edition).md  6.1.Player-Files.md  6.2.1.-Reset-Lists.md  6.2.Building-Rooms.md  6.3.-Building-Mobs.md  6.4.-Building-Objects.md  6.5.-Building-MUD-Programs.md  6.5.1.MOBprograms-(mudprograms).md  6.6.Building-Quest-Bits.md  7.-Spell-Manual.md  8.Useful-Functions.md  9.Weather.md  act_healer.txt  cmd_petfind.txt  hacker.txt  qcinst.txt
doc/new_snippets/: 2bil+classes.tgz  2bilclassfix.tgz  4classes.tgz  AFK Boards.7z  Aexit.txt  Antiflag snippet.txt  Auth.txt  Beep.txt  ClanRosters.txt  Cleararea.txt  Compass.txt  DayNightSnip.txt  Delete.txt  Dlsym.txt  Donate.txt  Format.txt  Gold Silver Copper Bank.c  IP.txt  Infoflags.txt  Junk.txt  MProgVariableExpansion.txt  Macros.txt  NewInstall.txt  New_auth.help  New_auth.txt  Newpass.txt  Ovrenumber.txt  Pfiles.txt  RemconHelp.txt  Rent.help  Rent.txt  ReplaceBFD.txt  Reroll.txt  Run.txt  Sigterm.txt  Slay.help  Slay.txt  SmaugWizloader.txt  Undertaker.txt  Vassign.txt  (+55 more)
doc/new_snippets/OasisOLCII-0.2/: INSTALL  OasisOLC-commands.patch  OasisOLC.patch  TODO  medit.c  mud.h  oedit.c  olc.h  redit.c
doc/new_snippets/editor/: Frozen.MUD  editor.c  editor.help  editor.patch  editor.txt
doc/snippets/2bil+classes/: act_comm.c.pat  act_move.c.pat  act_obj.c.pat  build.c.pat  commands.dat.pat  ibuild.c.pat  magic.c.pat  mud_prog.c.pat
doc/snippets/2bilclassfix/: Makefile.pat  comm.c.pat  const.c.pat  db.c.pat  grub.c.pat  inst  skills.dat.pat  update.c.pat
doc/snippets/4classes/: Makefile.patch  act_comm.c.patch  act_obj.c.patch  act_wiz.c.patch  comm.c.patch  commands.dat.patch  const.c.patch  db.c.patch  fight.c.patch  magic.c.patch  misc.c.patch  mud.h.patch  player.c.patch  skills.c.patch  skills.dat.patch  tables.c.patch  update.c.patch
doc/snippets/alias/: alias.c
doc/snippets/bil+class/: act_obj.c.pat  act_wiz.c.pat  build.c.pat  comm.c.pat  const.c.pat  db.c.pat  fight.c.pat  grub.c.pat  ibuild.c.pat  magic.c.pat  misc.c.pat  mud.h.pat  special.c.pat  tables.c.pat  update.c.pat
doc/snippets/billionvnum/: act_move.c.pat  act_wiz.c.pat  (+8 more)
etc/: Makefile.am  httpd.conf.in  xsmaugd.conf.in
etc/init.d/: Makefile.am  Makefile.in  xsmaugd-httpd.in  xsmaugd.debian.in
imc/: imc.commands  imc.config
man/: xsmaug.1
player/: README  player.parser
realm/: air.are  arachnos.are  area.lst  astral.are  bazaar.are  buds.are  bugs.txt  canyon.are  catacomb.are  chapelgods.are  chess.are  daycare.are  dwarven.are  eastern.are  galaxy.are  garden.are  gods.are  grave.are  grove.are  haon.are  haven.are  help.are  hood.are  isledead.are  limbo.are  mahntor.are  mega1.are  midennir.are  midgaard.are  newacad.are  newdark.are  ofcol2.are  plains.are  prehist.are  rats.are  redferne.are  school.are  sesamest.are  sewer.are  shire.are  (+4 more)
realm/areas_merc/: areas.txt  chess.are  gilligan.are  pblood.are  rshouse.are  school2.are  sfield.are  warkeep.are  weed.are
realm/areas_smaug1.4a/: anvil.are  arachnos.are  bazaar.are  canyon.are  catacomb.are  cloudymt.are  crystalmir.are  damara.are  demonweb.are  donjon.are  dread.are  dregoria.are  dwarfmines.are  fantasia.are  firehall.are  freaq.are  garden.are  goblins.are  haven.are  highcliff.are  hitower.are  hochenya.are  hollywd.are  hood.are  juargan.are  karnay.are  kender.are  lilith.are  lizardmen.are  mahntor.are  mgoose.are  mirkwood.are  mithril.are  mobfact.are  moria.are  mtdoom.are  museum.are  myth.are  olympus.are  pground.are  (+26 more)
src/: Makefile  Makefile.am  Makefile.in  Makefile.new  act_comm.c  act_comm.cpp  act_info.c  act_info.cpp  act_move.c  act_move.cpp  act_obj.c  act_obj.cpp  act_wiz.c  act_wiz.cpp  adminlist.c  archery.cpp  area.cpp  area.h  areaconvert.cpp  areaconvert.h  auction.cpp  auction.h  ban.c  ban.cpp  ban.h  bank.cpp  bet.h  bits.cpp  bits.h  boards.c  boards.cpp  boards.h  build.c  build.cpp  build.h  calendar.c  calendar.cpp  calendar.h  channels.cpp  channels.h  (+208 more)
system/: boot.txt
tools/: cleansrc
(+39 files in other folders)
